docs: define v1 requirements .planning/REQUIREMENTS.md